updated bindex-maven-plugin documentation.